--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,3 +1,10 @@
 .title {
   color: red;
 }
+
+.button {
+  padding: 4px 6px;
+  width: 50px;
+  background-color: aquamarine;
+  cursor: pointer;
+}
